<resources>
    <string name="app_name">Music Shop</string>
    <string name="app_name2">Your Order</string>
    <string name="your_name_edit_text">Your name</string>
    <string name="sale_30">SALE - 30%</string>
    <string name="select_item">Select Item</string>
    <string name="order_price">Order Price</string>
    <string name="quantity">Quantity</string>
    <string name="_0">0</string>
    <string name="znak_dolar">$</string>
    <string name="minus">-</string>
    <string name="_0_quantity">0</string>
    <string name="plus">+</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="customer_name">Customer name:</string>
    <string name="goods_name">Goods name:</string>
    <string name="quantity2">Quantity:</string>
    <string name="price">Price:</string>
    <string name="order_price2">Order Price:</string>
    <string name="submit_order">SUBMIT ORDER</string>
</resources>
