<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/your_name_edit_text"
        android:inputType="textPersonName"
        tools:ignore="Autofill"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="match_parent"
            android:layout_height="169dp"
            app:srcCompat="@drawable/music"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="230dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/abril_fatface"
            android:rotation="-22"
            android:text="@string/sale_30"
            android:textColor="@color/colorWhite"
            android:textSize="26sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:gravity="end"
        android:text="@string/select_item"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <ImageView
        android:id="@+id/imageViewGuitar"
        android:layout_width="match_parent"
        android:layout_height="183dp"
        app:srcCompat="@drawable/guitar2"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:text="@string/order_price"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:layout_width="191dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCurrency"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="55dp"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/znak_dolar"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:onClick="setClickMinus"
                android:text="@string/minus"
                android:textColor="@color/colorWhite"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textViewQuantity"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/_0_quantity"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="18dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:onClick="setClickPlus"
                android:text="@string/plus"
                android:textColor="@color/colorWhite"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonAddToCart"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@color/colorPrimary"
        android:onClick="setClickAddToCart"
        android:text="@string/add_to_cart"
        android:textColor="@color/colorWhite" />

</LinearLayout>