<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OrderActivity"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toRightOf="@id/customer"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/goods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goods_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/goods_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toRightOf="@id/goods"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/quan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity2"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toRightOf="@id/quan"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toRightOf="@id/textView1"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/order_price2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_price2"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toRightOf="@id/order_price2"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>

    <Button
        android:id="@+id/btEmail"
        android:layout_marginTop="50dp"
        android:onClick="submitOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_order">

    </Button>

</LinearLayout>